#canary refactor: Обновил swagger и рефактрил код
