# src/docs/swagger.json
@@ -125,17 +125,6 @@
         }
     },
     "definitions": {
-        "route_handlers.Endpoints": {
-            "type": "object",
-            "properties": {
-                "endpoint": {
-                    "type": "string"
-                },
-                "url": {
-                    "type": "string"
-                }
-            }
-        },
         "route_handlers.ErrorResponse": {
             "type": "object",
             "properties": {
@@ -170,9 +159,9 @@
             "type": "object",
             "properties": {
                 "endpoints": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/route_handlers.Endpoints"
+                    "type": "object",
+                    "additionalProperties": {
+                        "type": "string"
                     }
                 },
                 "secret_key": {
